fix z-index and height of sidebar menu

--- a/src/components/AppHeader/AppHeader.scss
+++ b/src/components/AppHeader/AppHeader.scss
@@ -106,7 +106,7 @@
   .hamburger-menu {
     display: inline-block;
     position: relative;
-    z-index: 2;
+    z-index: 1002;
 
     @media (min-width: 620px) {
       display: none;
@@ -289,11 +289,11 @@
   gap: 15px;
   padding-top: 80px;
   background-color: v.$color-primary;
-  z-index: 1;
+  z-index: 1001;
   top: 0;
   width: 100%;
   left: -100%;
-  height: 100%;
+  height: 100vh; 
   overflow: hidden;
   -webkit-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
